syntax = "proto3";
package protobuf;

option java_package= "com.chargingtime.protobuf.proto";
option java_outer_classname= "ChargingTimeProto";

message ChargingTime
{
	string batteryCapacity = 1;
	string maximumInputChargingPowerAC = 2;
	string maximumInputChargingPowerDC = 3;
	string chargingCurveVersionNumber = 4;
	string maxCumulatedPowerOfFastCharging = 5;
	string electricRange=6;
    repeated ChargingCurveData chargingCurveData= 7;

}

    message ChargingCurveData
    {
        repeated Temperature temprature = 1;
    }

    message Temperature
    {
        // Temperature of the battery (in Celsius degrees)
        sint32 tempratureValue = 1;
        repeated Mode2AC mode2AC = 2;
        repeated Mode3AC mode3AC = 3;
        repeated Mode4AC mode4AC = 4;
    }

    message Mode2AC
    {
        string ModeValue = 1;
        string unit = 2;
        uint32 fromSoc = 3;
        repeated Durations duration = 4;
    }

    message Mode3AC
    {
        string ModeValue = 1;
        string unit = 2;
        uint32 fromSoc = 3;
        repeated Durations duration = 4;
    }

    message Mode4AC
    {
        // Recharge power associated to the current curve (in Watt)
        string ModeValue = 1;

        string unit = 2;
        uint32 fromSoc = 3;
        repeated Durations duration = 4;
    }

    message Durations
    {
        // Target SoC (in percent)
        uint32 toSoc = 1;
        // Duration to recharge to the target SoC when the battery is pre-warmed (in minutes)
        uint32 duration = 2;
        // Duration to recharge to the target SoC when battery is “cold” (no pre-warming) (in minutes)
        uint32 durationWhenCold = 3;
    }



